# genai

./: README.md
tokens/: README.md  pyproject.toml  requirements.txt  run.txt
tokens/output/: report.md
tokens/outputs/: anthropic-claude-v3-5-haiku_report.json  anthropic-claude-v4-1-opus_report.json  bedrock-claude-4-5-sonnet_report.json  bedrock-claude-4-sonnet_report.json  bedrock-claude-v3-5-sonnet_report.json  bedrock-claude-v3-7-sonnet_report.json  bedrock-claude-v3-haiku_report.json  bedrock-claude-v3-sonnet_report.json  bedrock-nova-lite-v1_report.json  bedrock-nova-pro-v1_report.json  deepseek-r1-v1_report.json  meta-llama-v4-maverick-17b-instruct_report.json  meta-llama-v4-scout-17b-instruct_report.json  meta-llama3-70b-instruct_report.json  meta-llama3.2-11b-vision-v1_report.json  meta-llama3.2-1b-instruct-v1_report.json  meta-llama3.2-3b-instruct-v1_report.json  meta-llama3.2-90b-vision-v1_report.json  meta-llama3.3-70b-instruct-v1_report.json
tokens/src/tokens/: config_loader.py  crew.py  main.py  test_models.py
tokens/src/tokens/config/: agents.yaml  litellm.yaml  models.yaml  tasks.yaml
tokens/src/tokens/tools/: model_call_tool.py
