[project]
name = "tokens"
version = "0.1.0"
description = "Model performance comparison using CrewAI + Phoenix"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"

dependencies = [
    # --- Core CrewAI ---
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",

    # --- LangChain ecosystem ---
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",

    # --- Optional model wrappers ---
    # "langchain-litellm>=0.3.0",  # Only if using

    # --- Config & env ---
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",

    # --- Phoenix Tracing (via OTel) ---
    "arize-phoenix[otel]>=3.8.0",
    "openinference-instrumentation-langchain>=0.1.12",
]

[project.scripts]
tokens = "tokens.main:run"
run_crew = "tokens.main:run"
train = "tokens.main:train"
replay = "tokens.main:replay"
test = "tokens.main:test"
run_with_trigger = "tokens.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
